# median-filter-with-CUDA

./: CMakeLists.txt  Report.docx  readme.md
include/: device.cuh  medianFilter.h
src/: CPU_code.cpp  GPU_code.cu  image_proc.cu
